# pasteshit-backend

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: api.mdc  code-quality.mdc  database.mdc  dependencies.mdc  project-structure.mdc
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  schemas.py
app/api/v1/endpoints/: __init__.py  pastes.py
app/core/: __init__.py  config.py
app/database/: __init__.py  connection.py  crud.py  models.py
docs/: Backend Overview.md  Project Overview.md
tests/: __init__.py  conftest.py  test_pastes.py
tests/api/v1/: __init__.py  test_pastes.py
